		Windows-specific changes to R
		=============================

See the file NEWS for changes that affect all versions of R.


R 2.2.0
=======

file:// URLs are now interpreted by download.file(), download.packages() 
and url() in the same way as Mozilla-based browsers.  That is, the
expected form is

	file:///d:/path/to/file

with *three* slashes.



R 2.1.0 patched
===============

A menu item has been added for RSiteSearch().

localeToCharset() was failing on some unknown (to the maintainers)
locales such as

	LC_TYPE=Chinese_People's Republic of China.936

and that affected example().

Translation of the filters in file load/save dialog spaces was being
handled incorrectly by gettext, and is now not attempted.

Attempting to plot repeatedly to the same metafile sometimes crashed
R.  (PR#7821: it is unclear why Windows does not allow this.)

Using the mouse scroll wheel in the data editor sometimes caused
it to scroll out of range and crash or display garbage.

The support for mitred lines encountered a Windows problem with a
dramatic slowdown if more than 1000 or so segments were plotted in a
polyline.  We now plot in bunches of 1000, which is less accurate but
works around the Windows problem.



R 2.1.0
=======

There is no longer a miniR distribution.

Support for seek() on > 2Gb files has been added.

You will be asked to select a CRAN mirror when downloading/updating
packages unless options("repos") has already been set in your session,
e.g. in your .Rprofile file or from the 'Select CRAN mirror' menu
item.  (In batch use, not having set a mirror will lead to an error.)
BDR's supplementary collection is now included in the default
options("repos"): if you want to include it explicitly set something like
options(repos=c(some_cran_mirror, http://www.stats.ox.ac.uk/pub/RWin"))

There is a new item on the Packages menu to set repositories, e.g.
CRAN, Bioconductor, Omegahat.  You can modify the list (and its